--- a/css/flat-ui/index.html
+++ b/css/flat-ui/index.html
@@ -280,6 +280,7 @@
 
         <div class="col-md-3">
           <h3 class="demo-panel-title">Tags</h3>
+          <div class="tagsinput-add"></div>
           <input name="tagsinput" id="tagsinput" class="tagsinput" value="Clean,Fresh,Modern,Unique" />
         </div>
       </div> <!-- /row -->
